<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Txt_nom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/Nom"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Img_learners"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/Description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/Txt_nom"
                app:layout_constraintTop_toBottomOf="@+id/Txt_nom" />

            <TextView
                android:id="@+id/s_txt_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="@+id/txt_hours"
                app:layout_constraintEnd_toEndOf="@+id/Txt_nom"
                app:layout_constraintStart_toEndOf="@+id/txt_hours"
                app:layout_constraintTop_toTopOf="@+id/txt_hours"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/Img_learners"
                android:layout_width="71dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/img_learners_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_hours"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
             />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>