<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="61dp"
                android:background="@drawable/splash"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toTopOf="@+id/Project_submission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gads_250" />

            <TextView
                android:id="@+id/Project_submission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/Project_Submission"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?android:attr/colorPressedHighlight"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/under"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Project_submission" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/ET_First_Name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_back_edit_text"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/ET_Email_Address"
        app:layout_constraintEnd_toStartOf="@+id/ET_Last_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_submit" />

    <EditText
        android:id="@+id/ET_Email_Address"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_back_edit_text"
        android:ems="10"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/ET_Git_Link"
        app:layout_constraintEnd_toEndOf="@+id/ET_Last_Name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ET_First_Name"
        app:layout_constraintTop_toBottomOf="@+id/ET_First_Name" />

    <EditText
        android:id="@+id/ET_Last_Name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_back_edit_text"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/ET_First_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ET_First_Name"
        app:layout_constraintTop_toTopOf="@+id/ET_First_Name" />

    <EditText
        android:id="@+id/ET_Git_Link"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_back_edit_text"
        android:ems="10"
        android:hint="@string/git_hub_link"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/BT_Submit"
        app:layout_constraintEnd_toEndOf="@+id/ET_Email_Address"
        app:layout_constraintStart_toStartOf="@+id/ET_Email_Address"
        app:layout_constraintTop_toBottomOf="@+id/ET_Email_Address"
        app:layout_constraintVertical_bias="0.753" />

    <Button
        android:id="@+id/BT_Submit"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_roundedd_orange"
        android:layout_marginEnd="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/ET_Git_Link"
        app:layout_constraintStart_toStartOf="@+id/ET_Git_Link"
        app:layout_constraintTop_toBottomOf="@+id/ET_Git_Link" />

    <TextView
        android:id="@+id/T_result"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_roundedd_orange"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BT_Submit" />

</androidx.constraintlayout.widget.ConstraintLayout>